--- a/noteproject/src/index.css
+++ b/noteproject/src/index.css
@@ -1,26 +1,49 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Lucida Console', Monaco, monospace;
+  background-color: #f5f5dc; /* Color de fondo similar al papel */
   padding: 20px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.container {
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  width: 100%;
+  max-width: 400px;
+  margin: auto;
+  border-radius: 10px;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 form {
-  max-width: 400px;
-  margin: 0 auto;
-}
-
-div {
-  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-  display: block;
   margin-bottom: 5px;
+  color: #555;
 }
 
 input {
-  width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 button {
@@ -28,15 +51,26 @@ button {
   background-color: #007bff;
   color: white;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
-  border-radius: 20%;
-  margin: 5px;
-}
-
-link{
-  color: white;
+  font-size: 16px;
 }
 
 button:hover {
   background-color: #0056b3;
+}
+
+nav {
+  text-align: center;
+  margin-top: 20px;
+}
+
+nav a {
+  margin: 0 10px;
+  color: #007bff;
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
 }
