--- a/noteproject/frontend/src/index.css
+++ b/noteproject/frontend/src/index.css
@@ -1,8 +1,8 @@
-/* Estilos generales */
 body {
-  font-family: 'Arial', sans-serif;
-  background: #f2e6d9;
-  color: #5a3d31;
+  font-family: 'Arial Black', sans-serif;
+  background-image: url(./../public/fondo.png);
+  background-size: 1600px 900px;
+  color: #01579b; 
   margin: 0;
   padding: 0;
   display: flex;
@@ -13,19 +13,19 @@ body {
 
 .container {
   text-align: center;
-  background: #fff4e6;
+  background: #ffffff;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   width: 100%;
-  max-height: 90vh; /* Limitar la altura máxima de la contenedor principal */
+  max-height: 90vh;
   overflow: hidden;
 }
 
 .container-menu {
   text-align: center;
-  background: #eac18c;
+  background: #b3e5fc;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -33,7 +33,7 @@ body {
 }
 
 h2 {
-  color: #d17b47;
+  color: #0288d1; 
 }
 
 nav {
@@ -42,7 +42,7 @@ nav {
 
 nav a {
   margin: 0 1rem;
-  color: #d17b47;
+  color: #0288d1; 
   text-decoration: none;
   font-weight: bold;
 }
@@ -51,7 +51,11 @@ nav a:hover {
   text-decoration: underline;
 }
 
-/* Formulario */
+nav span {
+  color: #0288d1; 
+  font-weight: bold;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -61,7 +65,7 @@ form {
 label {
   margin-top: 1rem;
   font-size: 1rem;
-  color: #5a3d31;
+  color: #01579b; 
 }
 
 input[type="text"],
@@ -71,13 +75,14 @@ textarea {
   max-width: 400px;
   padding: 0.5rem;
   margin-top: 0.5rem;
-  border: 1px solid #d17b47;
+  border: 1px solid #0288d1; 
   border-radius: 5px;
   font-size: 1rem;
+  font-family: 'verdana', sans-serif;
 }
 
 button {
-  background: #d17b47;
+  background: #0288d1; 
   color: white;
   border: none;
   padding: 0.7rem 1.5rem;
@@ -86,19 +91,25 @@ button {
   margin-top: 1rem;
   cursor: pointer;
   transition: background 0.3s;
+  font-family: 'verdana', sans-serif;
 }
 
 button:hover {
-  background: #a64b2a;
+  background: #0277bd;
 }
 
 .note {
-  background: #ffefd5;
+  background: #e1f5fe;
   padding: 1rem;
   margin: 1rem 0;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  width: 550px;
+}
+
+.note p{
+  display: inline-block;
 }
 
 .note:hover {
@@ -121,7 +132,7 @@ button:hover {
   max-width: 600px;
   margin: 0 auto;
   overflow-y: auto;
-  max-height: 400px; /* Limitar la altura máxima de la lista de notas */
+  max-height: 290px;
 }
 
 .note div {
@@ -141,4 +152,30 @@ button:hover {
 
 .note button:last-child {
   margin-right: 0;
+}
+
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.75) !important;
+}
+
+.ReactModal__Content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #0288d1;
+  border-radius: 10px;
+  max-width: 500px;
+  width: 100%;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
+.modal p {
+  word-break: break-word;
 }
